{
    "name": "PlayerInputAction",
    "maps": [
        {
            "name": "DefaultMode",
            "id": "de339ef5-21b2-4147-9c94-cb516524e930",
            "actions": [
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "25dea6ae-b0d0-490d-9216-5bcf0d283bc5",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "422b50a5-1039-4d0e-a736-b7aa240fcd98",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ToggleBuildMode",
                    "type": "Button",
                    "id": "4c680bf1-8cca-436b-9bf7-d2aae6ff9b38",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseScroll",
                    "type": "Value",
                    "id": "d0aca384-e5a0-47a0-8e18-768405c6c55b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseDelta",
                    "type": "Value",
                    "id": "0590fc1a-5a8f-4e65-9d83-20b0ef1ba9a3",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "454e29f5-25f1-46be-8b5c-793a3b348a9b",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "22e8ae4d-845c-49b5-9b5a-aa628f94b7c4",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "1802b024-0efc-4292-b507-93c6140a5573",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "a46c2272-30f3-45b3-b93d-c7cfb32b6411",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "ad40b95c-4da8-4a82-b91a-1c0f4289e864",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "d5fc0fb1-fa14-4dbd-b6b6-c3e6e8bb824e",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "a640cb4b-67df-44a2-86b5-1a16eedd9bcd",
                    "path": "<Keyboard>/f3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleBuildMode",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a39f8c85-5163-46cd-9f15-6de114f03f9a",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseScroll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "45b6c044-55ba-41e5-9ce7-5ac86a377847",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "BuildingMode",
            "id": "8cb0a1c9-2766-4cea-9172-20fc4607ccc7",
            "actions": [
                {
                    "name": "DemountBuilding",
                    "type": "Button",
                    "id": "6b3377f3-2145-4a30-a82e-448368970d05",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RotateBuilding",
                    "type": "Button",
                    "id": "8ad0dcfd-109b-4bea-a503-d5c98dd55ebb",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a4f8c522-ae80-4d3e-bbc5-19d657c5d75b",
                    "path": "<Keyboard>/t",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DemountBuilding",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "426d4cee-5271-44c1-b556-22e3b3b439d9",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateBuilding",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "ProgrammingMode",
            "id": "5c44e411-b9bf-4976-9e6a-d9a730737d92",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "5f030627-6b65-4f6a-8cb0-215caedce006",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7b0beac5-8d57-420f-8b03-b087a46767d1",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "InterfaceMode",
            "id": "97fe80da-bbac-4cf8-bec7-c2db66ca47da",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "2a39bdb4-422a-40c6-b74b-31932faab7d9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9f0b8574-49d1-431b-b1b8-b40142234d81",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "MenuMode",
            "id": "870ad45a-f57a-41a8-83aa-a5cc65d51e4c",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "42689c30-7356-491d-acd7-564992793ea3",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3761d56a-83f8-4a26-bcdc-f2b86096e413",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Inventory",
            "id": "9fb5fb60-c21a-46ba-956f-cd260baf9c9d",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "57bd5d45-2930-4c7f-9ead-289e6b865d11",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e5a25f74-0178-475c-9647-ea3d271a0253",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}